@@ -21,59 +21,59 @@
 //
 
 namespace System.Linq.Expressions {
-	public enum ExpressionType
-	{
-		Add,
-		AddChecked,
-		And,
-		AndAlso,
-		ArrayLength,
-		ArrayIndex,
-		Call,
-		CallVirtual,
-		Cast,
-		Coalesce,
-		Conditional,
-		Constant,
-		Convert,
-		ConvertChecked,
-		Divide,
-		Equal,
-		ExclusiveOr,
-		Funclet,
-		GreaterThan,
-		GreaterThanOrEqual,
-		Invoke,
-		Lambda,
-		LeftShift,
-		LessThan,
-		LessThanOrEqual,
-		Lift,
-		LiftEqual,
-		LiftFalse,
-		LiftNotEqual,
-		LiftTrue,
-		ListInit,
-		MemberAccess,
-		MemberInit,
-		Modulo,
-		Multiply,
-		MultiplyChecked,
-		Negate,
-		NegateChecked,
-		New,
-		NewArrayInit,
-		NewArrayBounds,
-		Not,
-		NotEqual,
-		Or,
-		OrElse,
-		Parameter,
-		Quote,
-		RightShift,
-		Subtract,
-		SubtractChecked,
-		TypeAs,
-		TypeIs
+    public enum ExpressionType {
+        Add,
+        AddChecked,
+        And,
+        AndAlso,
+        ArrayIndex,
+        ArrayLength,
+        Call,
+        CallVirtual,
+        Cast,
+        Coalesce,
+        Conditional,
+        Constant,
+        Convert,
+        ConvertChecked,
+        Divide,
+        Equal,
+        ExclusiveOr,
+        Funclet,
+        GreaterThan,
+        GreaterThanOrEqual,
+        Invoke,
+        Lambda,
+        LeftShift,
+        LessThan,
+        LessThanOrEqual,
+        Lift,
+        LiftEqual,
+        LiftFalse,
+        LiftNotEqual,
+        LiftTrue,
+        ListInit,
+        MemberAccess,
+        MemberInit,
+        Modulo,
+        Multiply,
+        MultiplyChecked,
+        Negate,
+        NegateChecked,
+        New,
+        NewArrayBounds,
+        NewArrayInit,
+        Not,
+        NotEqual,
+        Or,
+        OrElse,
+        Parameter,
+        Quote,
+        RightShift,
+        Subtract,
+        SubtractChecked,
+        TypeAs,
+        TypeIs
+
     }
 }
